# pyIRI2016

./: .gitignore  .pre-commit-config.yaml  BUILD_FIX_SUMMARY.md  CHANGELOG.md  CHANGES.md  CMAKE_MIGRATION_NOTES.md  CMakeLists.txt  INSTALLATION.md  MIGRATION.md  MIGRATION_NOTES.md  Makefile  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  build_helper.py  f2py_wrapper.sh  generate_f2py.py  meson.build  pyproject.toml  pyproject_build_hook.py  setup.cfg  setup.py  test_build.sh  validate_build_env.py  verify_migration.sh
.ansible/: poetry.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: smoke.yml
examples/: README.md  demo_save_plots.py  example01.py  example02.py  iri1DExample01.py  iri1DExample01b.py  iri1DExample02.py  iri1DExample08.py
pyiri2016/: __init__.py  iri2016prof2D.py  meson.build
pyiri2016/api/: update.py
scripts/: iri2DExample01.py  iri2DExample02.py
settings/: settings.py
source/: irifun.for  iriweb.pyf  iriwebmodule.c  meson.build
tests/: test.py  test_api.py
