[project]
name = "pyiri2016"
version = "1.2.0"
description = "International Reference Ionosphere 2016 for Python"
authors = [{name = "Ronald R. Ilma Campana", email = "ronald.ilmacampana@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Science/Research",
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "numpy>=2.0",
    "simple-settings>=1.2.0",
    "beautifulsoup4>=4.10.0",
    "wget>=3.2",
    "timeutil @ git+https://github.com/rilma/TimeUtilities.git",
]

[project.optional-dependencies]
plotting = [
    "matplotlib>=3.5.0",
    "scipy>=1.9.0",
    "basemap-data>=1.3.2",
    "basemap>=1.3.2",
    "seaborn>=0.12.0",
]
dev = [
    "pre-commit>=2.16.0",
    "coverage>=6.2",
    "parameterized>=0.8.1",
    "cmake>=3.15",
    "ninja",
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[build-system]
requires = ["scikit-build-core", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"
wheel.packages = ["pyiri2016"]

[tool.setuptools]
packages = ["pyiri2016"]

[tool.setuptools.package-data]
pyiri2016 = ["data/**/*"]

